- Rogues Gloves
- Boxing Gloves
- Amulet of Drain Resistance
- Amulet of Nausea
- Amulet of Danger
- Mask
- Helm of Opaque Thoughts
- Playing Card Deck
- Deck of Fate
- Pinch of Catnip
- Potion of Reflection
- Scroll of Cloning
- Scroll of Pure Law
- Scroll of True Neutrality
- Scroll of Raw Chaos
- Wand of Healing
- Wand of Wonder
- Wand of Acid
- Wand of Poison Gas
- Wand of Sonics
- Wand of Psionics
- Bony Quill
- Ooze Dragon Scale Mail
- Razor Dragon Scale Mail
- Filth Dragon Scale Mail
- Hex Dragon Scale Mail
- Void Dragon Scale Mail
- Purple Dragon Scale Mail
- Ooze Dragon Scales
- Razor Dragon Scales
- Filth Dragon Scales
- Hex Dragon Scales
- Void Dragon Scales
- Purple Dragon Scales

New Monsters
- Giant Fly
- Earthshark
- Will-O'-The-Wisp
- Monstrous spider
- Memory Hound
- Thought Hound
- Weeping Eye
- Serval
- Lion
- Porcupine
- Manticore
- Nightmare
- Death maggot
- Lamassu
- Ooze Dragon
- Razor Dragon
- Filth Dragon
- Hex Dragon
- Void Dragon
- Fusion Elemental
- Legendary Lichen
- Worm that Walks
- Lord of Worms
- Lemur
- Zombie Dragon
- Animated Statue
- Desert Jinn
- Marid
- Merfolk
- Sea Horse
- Velociraptor
- T-Rex
- Banshee
- Corrosive Sphere
- Barghest
- Giant Praying Mantis
- Elder Kraken
- Amalgamation
- Bad Clone
- Draugr
- Amphisbaena
- Silver Golem
- Sludge Golem
- Cow
- Phoenix
- Spectre
- Little Bird
- Falcon
- Giant Falcon
- Dust Devil
- Swordfish
- Martial Artist
- Martial Master
- Mystic Scarab
- Goblin Windmage
- Whirling Sphere
- Chimera
- Cerastes
- Serpopard
- Lindorm
- Storm Elemental
- Screamer
- Purple Dragon
- Baby Purple Dragon
- Mind Flayer Telepath
- Gnomish Psychic
- Cartomancer (Player Monster)
- Dragonmaster (Player Monster)
- Infernal (Non-generated Race)
- Drake (Dragonmaster Quest)

New Unique Monsters
- Emperor Sankis
- Master of Cats
- Lord of the Foocubi
- Mephisto
- Buer
- King in Yellow
- Lord of the Cards
- Grim Reaper
- Dal Zethire
- Drakemother
- Slipscale the Betrayer
- Dragon of the Betrayer