@@ -336,6 +336,7 @@ New Monsters
 - Cartomancer (Player Monster)
 - Dragonmaster (Player Monster)
 - Infernal (Non-generated Race)
+- Minor Angel (Non-generated Race)
 - Drake (Dragonmaster Quest)
 
 New Unique Monsters
